Initial check in

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "devDependencies": {
     "expose-loader": "0.7.5",
+    "prettier": "^1.19.1",
     "ts-loader": "6.0.4",
     "typescript": "3.5.2",
     "webpack": "4.35.2",
